apps/production/macondo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: macondo
  namespace: macondo
  labels:
    app: macondo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: macondo
  template:
    metadata:
      labels:
        app: macondo
        name: macondo
    spec:
      containers:
      - name: macondo
        image: "registry.yesidlopez.de/macondo:1.3.2" # {"$imagepolicy": "macondo:macondo-prod"}
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
      imagePullSecrets:
        - name: registry-secret
