apps/production/macondo/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: macondo
  name: macondo
  namespace: macondo
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8000"
    prometheus.io/path: "/metrics"
spec:
  selector:
    app: macondo
  type: ClusterIP
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8000
